refactor(misc): import qualifiers, not needed null checking